employee attendance heatmap and client bar graph added

--- a/dashboard.html
+++ b/dashboard.html
@@ -14,6 +14,19 @@
       >
     </header>
 
+    <section class="dashboard-visuals">
+      <h2>Client Count Bar Graph</h2>
+      <canvas id="clientBarGraph" height="200"></canvas>
+
+      <h2 style="margin-top: 40px">Weekly Employee Attendance Heatmap</h2>
+      <div id="attendanceHeatmap" class="heatmap-grid"></div>
+    </section>
+
+    <section class="dashboard-container" id="dashboard"></section>
+
+    <!-- Add Chart.js library -->
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
     <section class="dashboard-container" id="dashboard"></section>
 
     <script src="dashboard.js"></script>
