top client tracker, employee utilization radar chart, and recent activity log

--- a/dashboard.html
+++ b/dashboard.html
@@ -20,15 +20,21 @@
 
       <h2 style="margin-top: 40px">Weekly Employee Attendance Heatmap</h2>
       <div id="attendanceHeatmap" class="heatmap-grid"></div>
+
+      <h2 style="margin-top: 40px">Top Clients This Week</h2>
+      <ul id="topClientsList" class="top-clients-list"></ul>
+
+      <h2 style="margin-top: 40px">Employee Utilization Overview</h2>
+      <canvas id="radarChart" height="300"></canvas>
+
+      <h2 style="margin-top: 40px">Recent Activity Log</h2>
+      <ul id="activityLog" class="activity-log-list"></ul>
     </section>
 
     <section class="dashboard-container" id="dashboard"></section>
 
     <!-- Add Chart.js library -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
-    <section class="dashboard-container" id="dashboard"></section>
-
     <script src="dashboard.js"></script>
   </body>
 </html>
