instructions section and styles added

--- a/index.html
+++ b/index.html
@@ -18,6 +18,40 @@
         />
       </a>
       <h1 class="title-homepage">Weekly Schedule Maker</h1>
+
+      <section class="instructions-section">
+        <h2>How to Use This Tool</h2>
+        <p>
+          This website allows you to create and manage weekly schedules and
+          attendance records for your employees. You can:
+        </p>
+        <ul>
+          <li>
+            ★ Create and manage employees using the "Create New Employee"
+            button.
+          </li>
+          <li>
+            ★ Click on an employee’s name to enter their weekly schedule or
+            attendance data.
+          </li>
+          <li>
+            ★ View a detailed overview in the
+            <strong>Manager Dashboard</strong>, including client counts,
+            attendance heatmaps, and top client stats.
+          </li>
+          <li>
+            ★ Use the <strong>“Download Dashboard PDF”</strong> button on the
+            dashboard to export all visual reports, weekly summaries, and
+            attendance data into a printable PDF.
+          </li>
+        </ul>
+        <p style="margin-top: 15px">
+          <strong>Note:</strong> All data is stored locally in your browser.
+          This tool is designed for lightweight planning and should not be used
+          to store sensitive personal information.
+        </p>
+      </section>
+
       <button id="openEmployeeFormBtn" class="action-button">
         Create New Employee
       </button>
