animated bot logo

--- a/index.html
+++ b/index.html
@@ -9,15 +9,20 @@
   <body>
     <header>
       <div id="navbar-container"></div>
-
+      <h1 class="title-homepage">Weekly Schedule Maker</h1>
       <a href="index.html" class="logo-link">
-        <img
+        <!-- <img
           src="logo.png"
           alt="Weekly Schedule Maker Logo"
           class="site-logo"
+        /> -->
+
+        <img
+          src="logo.png"
+          alt="Friendly Robot Mascot"
+          class="animated-bot-logo"
         />
       </a>
-      <h1 class="title-homepage">Weekly Schedule Maker</h1>
 
       <section class="instructions-section">
         <h2>How to Use This Tool</h2>
