--- a/schedule.html
+++ b/schedule.html
@@ -15,6 +15,7 @@
           document.getElementById("navbar-container").innerHTML = html;
         });
     </script>
+    <img src="logo.png" alt="Friendly Robot Mascot" class="animated-bot-logo" />
 
     <h1>Weekly Activity Schedule</h1>
     <h3>Monday - Friday</h3>
