--- a/index.html
+++ b/index.html
@@ -40,6 +40,12 @@
             attendance data.
           </li>
           <li>
+            ★ Click on a client’s name in the schedule view to enter daily
+            comments for that client. You can review past notes in a
+            calendar-style format and download them as a printable PDF—either
+            for a full history or a selected date range.
+          </li>
+          <li>
             ★ View a detailed overview in the
             <strong>Manager Dashboard</strong>, including client counts,
             attendance heatmaps, and top client stats.
