updated styles for employee cards and navbar

--- a/navbar.html
+++ b/navbar.html
@@ -17,5 +17,10 @@
         <li><a href="schedule.html">Schedule</a></li>
       </ul>
     </nav>
+    <script>
+      function toggleNavbar() {
+        document.querySelector(".navbar-links").classList.toggle("show");
+      }
+    </script>
   </body>
 </html>
