--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Weekly Schedule Maker</title>
+    <title>Weekly Schedule Tracker</title>
     <link href="styles.css" rel="stylesheet" />
   </head>
   <body>
     <header>
       <div id="navbar-container"></div>
-      <h1 class="title-homepage">Weekly Schedule Maker</h1>
+      <h1 class="title-homepage">Weekly Schedule Tracker</h1>
       <a href="index.html" class="logo-link">
         <!-- <img
           src="logo.png"
