--- a/dashboard.html
+++ b/dashboard.html
@@ -28,7 +28,17 @@
     <a href="index.html" class="action-button" style="margin-top: 20px"
       >← Back to Home</a
     >
-
+    <section>
+      <div
+        id="stats-box"
+        style="
+          margin-bottom: 20px;
+          margin-top: 30px;
+          font-size: 1em;
+          color: #555;
+        "
+      ></div>
+    </section>
     <section class="dashboard-visuals">
       <h2>Client Count Bar Graph</h2>
       <canvas id="clientBarGraph" height="200"></canvas>
