--- a/dashboard.html
+++ b/dashboard.html
@@ -38,6 +38,15 @@
           color: #555;
         "
       ></div>
+
+      <h2 style="margin-top: 40px">Recently Added Employees</h2>
+      <ul id="recentEmployees" class="activity-log-list"></ul>
+
+      <h2 style="margin-top: 40px">Employees Working Per Day</h2>
+      <canvas id="dayBreakdownChart" height="200"></canvas>
+
+      <h2 style="margin-top: 40px">Most Frequent Clients</h2>
+      <ul id="topClientNames" class="top-clients-list"></ul>
     </section>
     <section class="dashboard-visuals">
       <h2>Client Count Bar Graph</h2>
