--- a/dashboard.html
+++ b/dashboard.html
@@ -47,6 +47,14 @@
 
       <h2 style="margin-top: 40px">Most Frequent Clients</h2>
       <ul id="topClientNames" class="top-clients-list"></ul>
+
+      <button
+        id="downloadWeeklyReportBtn"
+        class="download-button"
+        style="margin-top: 30px"
+      >
+        📄 Download Weekly Report
+      </button>
     </section>
     <section class="dashboard-visuals">
       <h2>Client Count Bar Graph</h2>
