activity log added

--- a/dashboard.html
+++ b/dashboard.html
@@ -71,6 +71,9 @@
 
       <h2 style="margin-top: 40px">Recent Activity Log</h2>
       <ul id="activityLog" class="activity-log-list"></ul>
+
+      <h2 style="margin-top: 40px">📅 Daily Change Log</h2>
+      <div id="dailyChangeLog" class="activity-log-list"></div>
     </section>
 
     <section class="dashboard-container" id="dashboard"></section>
