--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Weekly Schedule Tracker</title>
+    <title class="titleWeekly">Weekly Schedule Tracker</title>
     <link href="styles.css" rel="stylesheet" />
   </head>
   <body>
