--- a/dashboard.html
+++ b/dashboard.html
@@ -35,7 +35,7 @@
           margin-bottom: 20px;
           margin-top: 30px;
           font-size: 1em;
-          color: #555;
+          color: #1eff00;
         "
       ></div>
 
