--- a/schedule.html
+++ b/schedule.html
@@ -27,8 +27,8 @@
       onclick="window.location.href='index.html'"
       style="
         margin-top: 15px;
-        background-color: #4caf50;
-        color: white;
+        background-color: #79fdfe;
+        color: #000;
         padding: 10px 15px;
         border: none;
         border-radius: 5px;
