added welcome message

--- a/index.html
+++ b/index.html
@@ -24,6 +24,15 @@
         />
       </a>
 
+      <section class="welcome-message">
+        <h2 class="tagline-title">✨ Built for Modern Care Teams</h2>
+        <p class="tagline-subtitle">
+          Welcome to the Weekly Schedule Tracker — a human-centered tool
+          designed to simplify daily planning, enhance accountability, and
+          unlock the future of lightweight staff coordination.
+        </p>
+      </section>
+
       <section class="instructions-section">
         <h2>How to Use This Tool</h2>
         <p>
