updated message demo

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title class="titleWeekly">Weekly Schedule Tracker</title>
+    <title class="titleWeekly">Weekly Schedule Tracker - Demo</title>
     <link href="styles.css" rel="stylesheet" />
   </head>
   <body>
     <header>
       <div id="navbar-container"></div>
-      <h1 class="title-homepage">Weekly Schedule Tracker</h1>
+      <h1 class="title-homepage">Weekly Schedule Tracker - Demo</h1>
       <a href="index.html" class="logo-link">
         <!-- <img
           src="logo.png"
@@ -25,11 +25,16 @@
       </a>
 
       <section class="welcome-message">
-        <h2 class="tagline-title">✨ Built for Modern Care Teams</h2>
         <p class="tagline-subtitle">
-          Welcome to the Weekly Schedule Tracker — a human-centered tool
-          designed to simplify daily planning, enhance accountability, and
-          unlock the future of lightweight staff coordination.
+          This is a live front-end prototype of a fullstack
+          <strong>MERN-based scheduling platform</strong>—designed for
+          coordination, billing, attendance tracking, and staff performance insights.
+          <br /><br />
+          <strong>Important:</strong> All data is stored in your browser only
+          (no backend, no cloud). This demo is <em>not</em> intended for storing
+          sensitive information. <br /><br />
+          It’s an early look at a scalable staff management system tailored for
+          care teams, coordinators, and workplace dashboards.
         </p>
       </section>
 
