employee card style updates

--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <p class="tagline-subtitle">
           This is a live front-end prototype of a fullstack
           <strong>MERN-based scheduling platform</strong>—designed for
-          coordination, billing, attendance tracking, and staff performance insights.
-          <br /><br />
+          coordination, billing, attendance tracking, and staff performance
+          insights. <br /><br />
           <strong>Important:</strong> All data is stored in your browser only
           (no backend, no cloud). This demo is <em>not</em> intended for storing
           sensitive information. <br /><br />
