--- a/index.html
+++ b/index.html
@@ -26,57 +26,46 @@
 
       <section class="welcome-message">
         <p class="tagline-subtitle">
-          This is a live front-end prototype of a fullstack
-          <strong>MERN-based scheduling platform</strong>—designed for
-          coordination, billing, attendance tracking, and staff performance
-          insights. <br /><br />
-          <strong>Important:</strong> All data is stored in your browser only
-          (no backend, no cloud). This demo is <em>not</em> intended for storing
-          sensitive information. <br /><br />
-          It’s an early look at a scalable staff management system tailored for
-          care teams, coordinators, and workplace dashboards.
+          This live front-end demo showcases a
+          <strong>MERN-based scheduling platform</strong> built for
+          coordination, billing, attendance, and performance insights.<br /><br />
+          <strong>Note:</strong> Data is stored <em>only</em> in your browser.
+          This demo is for testing and planning — <strong>not</strong> for
+          sensitive information.
         </p>
       </section>
+
       <hr />
 
       <section class="instructions-section">
-        <h2>How to Use This Tool</h2>
-        <p>
-          This website allows you to create and manage weekly schedules and
-          attendance records for your employees. You can:
-        </p>
+        <h2>Quick Start Guide</h2>
         <ul>
           <li>
-            ★ Create and manage employees using the "Create New Employee"
-            button.
+            ★ <strong>Create employees</strong> using the “New Employee” button.
           </li>
           <li>
-            ★ Click on an employee’s name to enter their weekly schedule or
-            attendance data.
+            ★ <strong>Click an employee</strong> to edit their schedule or
+            attendance.
           </li>
           <li>
-            ★ Click on a client’s name in the schedule view to enter daily
-            comments for that client. You can review past notes in a
-            calendar-style format and download them as a printable PDF—either
-            for a full history or a selected date range.
+            ★ <strong>Click a client</strong> in the schedule to enter/view
+            daily notes.
           </li>
           <li>
-            ★ View a detailed overview in the
-            <strong>Manager Dashboard</strong>, including client counts,
-            attendance heatmaps, and top client stats.
+            ★ <strong>Manager Dashboard:</strong> View top clients, attendance
+            heatmaps, and export reports.
           </li>
           <li>
-            ★ Use the <strong>“Download Dashboard PDF”</strong> button on the
-            dashboard to export all visual reports, weekly summaries, and
-            attendance data into a printable PDF.
+            ★ <strong>PDF Export:</strong> Download schedules, notes, and
+            dashboards with one click.
           </li>
         </ul>
-        <p style="margin-top: 15px">
-          <strong>Note:</strong> All data is stored locally in your browser.
-          This tool is designed for lightweight planning and should not be used
-          to store sensitive personal information.
+        <p style="margin-top: 12px">
+          This tool is ideal for planning and internal coordination — no cloud,
+          no accounts, no tracking.
         </p>
       </section>
+
       <hr />
       <button id="openEmployeeFormBtn" class="action-button">
         Create New Employee
