download button style update

--- a/dashboard.html
+++ b/dashboard.html
@@ -32,19 +32,14 @@
     <button
       id="downloadWeeklyReportBtn"
       class="download-button"
-      style="margin-top: 30px"
+   
     >
       📄 Download Weekly Report
     </button>
     <section>
       <div
         id="stats-box"
-        style="
-          margin-bottom: 20px;
-          margin-top: 30px;
-          font-size: 1em;
-          color: #1eff00;
-        "
+        style="margin-bottom: 20px; margin-top: 30px; font-size: 1em"
       ></div>
       <hr />
 
