--- a/dashboard.html
+++ b/dashboard.html
@@ -29,17 +29,21 @@
       >← Back to Home</a
     >
 
-    <button
-      id="downloadWeeklyReportBtn"
-      class="download-button"
-   
-    >
+    <button id="downloadWeeklyReportBtn" class="download-button">
       📄 Download Weekly Report
     </button>
     <section>
       <div
         id="stats-box"
-        style="margin-bottom: 20px; margin-top: 30px; font-size: 1em"
+        style="
+          margin-bottom: 20px;
+          margin-top: 30px;
+          font-size: 1em;
+          color: #a0fb94;
+          background-color: #333;
+          padding: 20px;
+          border-radius: 8px;
+        "
       ></div>
       <hr />
 
