--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <div id="navbar-container"></div>
-      <h1 class="title-homepage">Weekly Schedule Tracker - Demo</h1>
+      <h1 class="title-homepage">Weekly Schedule Tracker</h1>
       <a href="index.html" class="logo-link">
         <!-- <img
           src="logo.png"
@@ -25,6 +25,7 @@
       </a>
 
       <section class="welcome-message">
+        <h2>Demo</h2>
         <p class="tagline-subtitle">
           This live front-end demo showcases a
           <strong>MERN-based scheduling platform</strong> built for
