warning message added

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </a>
 
       <section class="welcome-message">
-        <h2>Demo</h2>
+        <h2>WARNING: Demo Only</h2>
         <p class="tagline-subtitle">
           This live front-end demo showcases a
           <strong>MERN-based scheduling platform</strong> built for
