--- a/navbar.html
+++ b/navbar.html
@@ -15,6 +15,7 @@
         <li><a href="index.html">Home</a></li>
         <li><a href="dashboard.html">Dashboard</a></li>
         <li><a href="schedule.html">Schedule</a></li>
+        <li><a href="trends.html">Trends</a></li>
       </ul>
     </nav>
     <script>
